fix AddCompletedLesson
